--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,17 +9,26 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".HireTutor"></activity>
-        <activity android:name=".ChildInfo" />
-        <activity android:name=".AddNewChild" />
-        <activity android:name=".SignUpParent" />
-        <activity android:name=".LoginPage" />
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".Message"
+            android:label="@string/title_activity_message"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+
+
+        </activity>
+        <activity android:name=".HireTutor" />
+        <activity android:name=".ChildInfo" />
+        <activity android:name=".AddNewChild" />
+        <activity android:name=".SignUpParent" />
+        <activity android:name=".LoginPage" />
+        <activity android:name=".MainActivity">
+
         </activity>
     </application>
 
