--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".TutorRequestOpen"></activity>
+        <activity android:name=".TutorRequestRecommend"></activity>
+        <activity android:name=".TutorRequestViewApp" />
+        <activity android:name=".TutorRequestOpen" />
         <activity android:name=".ChildDetail" />
         <activity
             android:name=".parentSideNav"
@@ -18,14 +20,13 @@
         <activity
             android:name=".Message"
             android:label="@string/title_activity_message"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".HireTutor">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-            sdfsdfsd
         </activity>
         <activity android:name=".ChildInfo" />
         <activity android:name=".AddNewChild" />
