--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ParentDashboardCal"></activity>
+        <activity android:name=".tutorDashboardCal"></activity>
+        <activity android:name=".ParentDashboardCal" />
         <activity android:name=".ListOfChild" />
         <activity android:name=".HomePage" />
         <activity android:name=".HomePageTutor" />
