--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ParentHistoryPostClosed"></activity>
+        <activity android:name=".MessageContent"></activity>
+        <activity android:name=".HomeMessage" />
+        <activity android:name=".ParentHistoryPostClosed" />
         <activity android:name=".ParentHistoryPost" />
         <activity android:name=".TutorIncomeEarned" />
         <activity android:name=".ParentPayment" />
